<resources>
    <string name="app_name">News</string>
    <string name="loading">Loading...</string>
    <string name="title_activity_list">ListActivity</string>

    <string name="list_title">新闻</string>
    <string name="list_search">搜索</string>
    <string name="list_search_hint">"搜索新闻关键字"</string>
    <string name="list_sort">排序</string>
    <string name="list_sort_title">按标题排序</string>
    <string name="list_sort_publish_time">按发布时间排序</string>
    <string name="list_sort_title_rev">按标题逆序</string>
    <string name="list_sort_publish_time_rev">按发布时间逆序</string>
    <string name="list_clear">清空本页</string>

    <string name="group_all_news">All News</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="news_favorite">收藏</string>
    <string name="news_delete">删除</string>
    <string name="news_share">分享</string>
    <string name="news_share_text">分享（仅文字）</string>
    <string name="news_share_image">分享（仅图片）</string>

    <string name="news_preview_content">内容摘要: </string>
    <string name="news_preview_category">类别: </string>
    <string name="news_preview_publish_time">发布日期: </string>
    <string name="news_preview_publisher">发布者: </string>

    <string name="read_string">[已读]</string>

    <string name="nav_kind_string">新闻种类</string>
    <string name="nav_category_string">新闻主题</string>

    <string name="nav_kind0_string">最新</string>
    <string name="nav_kind2_string">已读</string>
    <string name="nav_kind3_string">搜索结果</string>

    <string name="nav_category0_string">全部</string>
    <string name="nav_category1_string">新闻</string>
    <string name="nav_category2_string">论文</string>
    <string name="nav_category3_string">事件</string>


    <string name="network_err">网络错误</string>

    <string name="shortcut_search_disable">搜索不可用</string>
    <string name="shortcut_search_long">搜索新闻</string>
    <string name="shortcut_search_short">搜索新闻</string>

</resources>
