<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="">
        <menu>
            <group android:id="@+id/navKind">
                <item android:id="@+id/navKind0"
                    android:title="@string/nav_kind0_string"
                    android:icon="@drawable/baseline_whatshot_black_48dp"/>
                <item android:id="@+id/navKind1"
                    android:title="@string/nav_kind2_string"
                    android:icon="@drawable/baseline_playlist_add_check_black_48dp"/>
                <item android:id="@+id/navKind2"
                    android:title="@string/nav_kind3_string"
                    android:icon="@drawable/baseline_search_black_48dp"/>
            </group>
        </menu>
    </item>


    <item android:title="@string/nav_category_string">
        <menu>
            <group android:id="@+id/navType">
                <item android:id="@+id/navType0"
                    android:title="@string/nav_category0_string"
                    android:icon="@drawable/baseline_all_inclusive_black_48dp"/>
                <item android:id="@+id/navType1"
                    android:title="@string/nav_category1_string"
                    android:icon="@drawable/baseline_music_video_black_48dp"/>
                <item android:id="@+id/navType2"
                    android:title="@string/nav_category2_string"
                    android:icon="@drawable/baseline_gavel_black_48dp"/>
                <item android:id="@+id/navType3"
                    android:title="@string/nav_category3_string"
                    android:icon="@drawable/baseline_school_black_48dp"/>
            </group>
        </menu>
    </item>
</menu>